--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@ Our expectational checkup
 <img src="/images/doc2.jpg" alt="" class="img"> 
 <div class="image">
     <br/>
-    <span class="doc-name">Dr. Kachun</span> &nang;&nang;&nang;<span class="title">Pediatrician</span>
+    <span class="doc-name">Dr. Esther</span> &nang;&nang;&nang;<span class="title">Pediatrician</span>
     <br/>
     <br/>
     6 years experience
@@ -265,10 +265,10 @@ Our expectational checkup
 <img src="/images/doc3.jpg" alt="" class="img">
 <div class="image">
     <br/>
-    <span class="doc-name">Dr. Kachun</span> &nang;&nang;&nang;<span class="title">Surgeon</span>
+    <span class="doc-name">Dr. Daisy</span> &nang;&nang;&nang;<span class="title">Surgeon</span>
     <br/>
     <br/>
-    6 years experience
+    7 years experience
     <br/>
     Performs surgical procedures to treat diseases, injuries, or deformities. Surgeons may specialize in various areas such as orthopedic surgery, cardiothoracic surgery, neurosurgery.
     <br/>
@@ -282,7 +282,7 @@ Our expectational checkup
     <span class="doc-name">Dr. Kachun</span> &nang;&nang;<span class="title">Dermatologist</span>
     <br/>
     <br/>
-    6 years experience
+    10 years experience
     <br/>
     Specializes in diagnosing and treating conditions 
     <br/>
@@ -298,10 +298,10 @@ Our expectational checkup
 <img src="/images/doc5.jpg" alt="" class="img">
 <div class="image">
     <br/>
-    <span class="doc-name">Dr. Kachun</span> &nang;&nang;&nang;<span class="title">Psychiatrist</span>
+    <span class="doc-name">Dr. Ambrose</span> &nang;&nang;&nang;<span class="title">Psychiatrist</span>
     <br/>
     <br/>
-    6 years experience
+    13 years experience
     <br/>
     Specializes in mental health, diagnosing and treating mental illnesses providing therapy, and prescribing medications for psychiatric conditions.
     <br/>
@@ -312,7 +312,7 @@ Our expectational checkup
 <img src="/images/doc8.jpg" alt="" class="img">
 <div class="image">
     <br/>
-    <span class="doc-name">Dr. Kachun</span> &nang;<span class="title">Internal Physician</span>
+    <span class="doc-name">Dr. Samwel</span> &nang;<span class="title">Internal Physician</span>
     <br/>
     <br/>
     6 years experience
@@ -326,10 +326,10 @@ Our expectational checkup
 <img src="/images/doc7.jpg" alt="" class="img">
 <div class="image">
     <br/>
-    <span class="doc-name">Dr. Kachun</span> &nang;<span class="title">Anesthesiologist: </span>
+    <span class="doc-name">Dr. Morgan</span> &nang;<span class="title">Anesthesiologist</span>
     <br/>
     <br/>
-    6 years experience
+    20 years experience
     <br/>
     Administers anesthesia and monitors patients' vital signs during surgical procedures, ensuring their safety and comfort.
     <br/>
