created a health website

--- a/index.html
+++ b/index.html
@@ -11,16 +11,18 @@
 <body>
     <nav>
         <ul>
-            <li> <a href="home"></a> Home</li>
-            <li> <a href="doctors"></a>Doctors</li>
-            <li> <a href="services"></a>Services</li>
-            <li> <a href="contact"></a>Contact</li>
+            <li><a href="#home">Home</a></li>
+            <li><a href="#doctors">Doctors</a></li>
+            <li><a href="#services">Services</a></li>
+            <li><a href="#about us">About us</a></li>
+            <li><a href="#contact">Contact</a></li>
             <li>Search</li>
             <li><button class="btn2">Login</button></li>
             <li><button class="btn2">Sign Up</button></li>
         </ul>
     </nav>
 
+    <section id="home">
     <section class="detail2">
     <div class="detail1">
         <p class="detail3">
@@ -46,9 +48,12 @@
         <p>3, 000+ Recovered patients</p>
         <p>200+ Expert doctors</p>
     </div>
+</section>
 
 <!-- .......................................SERVICES........................................ -->
 
+
+<section id="services">
 <h1>Our services</h1>
 
 <p class="service2">
@@ -180,10 +185,13 @@ medical examinations, tests, and procedures performed by healthcare professional
     </p>
 </div>
 </section>
+</section>
 
 
 <!-- ............................................ABOUT.................................................. -->
 
+
+<section id="about us">
 <h1>About us</h1>
 
 <section class="about">
@@ -241,10 +249,13 @@ Our expectational checkup
     <br/>
 </div>
 </section>
+</section>
 
 
 <!-- .......................................DOCTORS............................................ -->
 
+
+<section id="doctors">
 <h1>Meet Our Experienced Doctors</h1>
 
 <section class="docsection1">
@@ -335,6 +346,7 @@ Our expectational checkup
     <br/>
     <p class="appoint"><button class="btn-appointment">Make appointment</button></p>
 </div>
+</section>
 </section>
 
 
@@ -479,7 +491,7 @@ Our expectational checkup
 <section class="forms">
     <div class="doctors-sheet">
         <h3>Select your Doctor</h3>
-        <form>
+        <form class="form">
             <label for="doctor-name">Name:</label>
             <input type="text" id="doctor-name" name="doctor-name" placeholder="Enter your name" required>
 
@@ -495,7 +507,7 @@ Our expectational checkup
 
     <div class="patients-sheet">
         <h3>Enter your details</h3>
-        <form>
+        <form class="form">
             <label for="patient-name">Name:</label>
             <input type="text" id="patient-name" name="patient-name" placeholder="Enter your name" required>
 
@@ -536,7 +548,7 @@ Our expectational checkup
 
 <!-- ..............................................FOOTER............................................. -->
 
-<footer class="footer">
+<footer id="contact ">
     <div class="footer-top">
       <div class="footer-links">
         <h4>Quick Links</h4>
